Adding input/output web call validaton, cleaning up personalization of the site.
